# pulsar-api

./: .claudeignore  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/rules/: security.md
.claude/skills/docker/: SKILL.md
.claude/skills/fastapi-endpoint/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/rag-pipeline/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/testing/: SKILL.md
api/: deps.py  middleware.py
api/routes/: chat.py  health.py
core/: config.py  logging.py
llm/: client.py  prompts.py  streaming.py
models/: schemas.py
rag/: engine.py  ingest.py  retriever.py
requests/: api.http
scripts/: download_dataset.py
tests/: conftest.py
tests/integration/: test_chat.py  test_health.py
tests/unit/: test_prompts.py  test_schemas.py
